--- a/app/views/realestates/show.html.erb
+++ b/app/views/realestates/show.html.erb
@@ -400,7 +400,7 @@
         <!-- Agent Detail -->
         <div class="sides-widget">
           <div class="sides-widget-header">
-            <div class="agent-photo"><%= image_tag("sistach_favicon", alt: "Sistach Finques") %></div>
+            <div class="agent-photo"><%= image_tag("https://res.cloudinary.com/dlzusxobf/image/upload/v1674377649/sistach_favicon_c9rb1y.png", alt: "Sistach Finques") %></div>
             <div class="sides-widget-details">
               <h4><a href="#">Sistach Finques</a></h4>
               <span><i class="lni-phone-handset"></i>972 100 381</span>
