--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,6 +7,7 @@
           <div class="footer-widget">
             <%= image_tag("https://res.cloudinary.com/dlzusxobf/image/upload/v1674377649/logo_light_hvbgn4.png", class: "img-footer", alt: "Sistach Finques") %>
             <div class="footer-add">
+              <a href="JavaScript:Void(0);" data-bs-toggle="modal" data-bs-target="#login"><i class="fas fa-network-wired"></i> Extranet</a>
             </div>
           </div>
         </div>
