--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -37,7 +37,16 @@
               <div class="d-navigation">
                 <ul>
                   <li class="active"><a href="dashboard.html"><i class="fas fa-chart-line"></i> Control de panel</a></li>
-                  <li><a href="my-profile.html"><i class="fas fa-user"></i> El meu compte</a></li>
+                  <li>
+                    <%= link_to edit_user_registration_path, class: "dropdown-item" do %>
+                      <i class="fas fa-user"></i> El meu compte
+                    <% end %>
+                  </li>
+                  <li>
+                    <%= link_to edit_user_registration_path do %>
+                      <i class="fas fa-unlock-alt"></i> Canviar contrasenya
+                    <% end %>
+                  </li>
                   <% if current_user.admin? %>
                     <li>
                       <%= link_to sidekiq_web_path, target: "_blank" do %>
@@ -45,11 +54,9 @@
                       <% end %>
                     </li>
                   <% end %>
-                  <li><a href="bookmark-list.html"><i class="fas fa-heart"></i> Immobles guardats</a></li>
-                  <li><a href="my-property.html"><i class="fas fa-house"></i> Els meus immobles</a></li>
-                  <li><a href="submit-property-dashboard.html"><i class="fas fa-house circle check"></i> Afegir immoble nou</a></li>
-                  <li><a href="change-password.html"><i class="fas fa-unlock-alt"></i> Canviar contrasenya</a></li>
-                  <li><a href="#"><i class="fas fa-sign-out-alt"></i> Tancar sessió</a></li>
+                  <li>
+                    <a href="#interested-owners"><i class="fas fa-laptop-house"></i> Propietaris interessats</a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -57,63 +64,7 @@
         </div>
       </div>
       <div class="col-lg-9 col-md-12">
-        <!-- Dashboard elements - not using for the moment
-        <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12">
-            <h4>Your Current Package: <span class="pc-title theme-cl">Gold Package</span></h4>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="dashboard-stat widget-1">
-              <div class="dashboard-stat-content">
-                <h4>607</h4>
-                <span>Listings Included</span></div>
-              <div class="dashboard-stat-icon"><i class="ti-location-pin"></i></div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="dashboard-stat widget-2">
-              <div class="dashboard-stat-content">
-                <h4>102</h4>
-                <span>Listings Remaining</span></div>
-              <div class="dashboard-stat-icon"><i class="ti-pie-chart"></i></div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="dashboard-stat widget-3">
-              <div class="dashboard-stat-content">
-                <h4>70</h4>
-                <span>Featured Included</span></div>
-              <div class="dashboard-stat-icon"><i class="ti-user"></i></div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="dashboard-stat widget-4">
-              <div class="dashboard-stat-content">
-                <h4>30</h4>
-                <span>Featured Remaining</span></div>
-              <div class="dashboard-stat-icon"><i class="ti-location-pin"></i></div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="dashboard-stat widget-5">
-              <div class="dashboard-stat-content">
-                <h4>Unlimited</h4>
-                <span>Images / per listing</span></div>
-              <div class="dashboard-stat-icon"><i class="ti-pie-chart"></i></div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="dashboard-stat widget-6">
-              <div class="dashboard-stat-content">
-                <h4>2021-02-26</h4>
-                <span>Ends On</span></div>
-              <div class="dashboard-stat-icon"><i class="ti-user"></i></div>
-            </div>
-          </div>
-        </div>
-        Dashboard elements end -->
+        <!-- Dashboard wrapper 1 -->
         <div class="dashboard-wraper mb-3">
           <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 mt-3">
@@ -142,74 +93,34 @@
             </div>
           </div>
         </div>
-        <div class="dashboard-wraper">
-          <!-- Basic Information -->
-          <div class="form-submit">
-            <h4>My Account</h4>
-            <div class="submit-section">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label>Your Name</label>
-                  <input type="text" class="form-control" value="Shaurya Preet">
-                </div>
-                <div class="form-group col-md-6">
-                  <label>Email</label>
-                  <input type="email" class="form-control" value="preet77@gmail.com">
-                </div>
-                <div class="form-group col-md-6">
-                  <label>Your Title</label>
-                  <input type="text" class="form-control" value="Web Designer">
-                </div>
-                <div class="form-group col-md-6">
-                  <label>Phone</label>
-                  <input type="text" class="form-control" value="123 456 5847">
-                </div>
-                <div class="form-group col-md-6">
-                  <label>Address</label>
-                  <input type="text" class="form-control" value="522, Arizona, Canada">
-                </div>
-                <div class="form-group col-md-6">
-                  <label>City</label>
-                  <input type="text" class="form-control" value="Montquebe">
-                </div>
-                <div class="form-group col-md-6">
-                  <label>State</label>
-                  <input type="text" class="form-control" value="Canada">
-                </div>
-                <div class="form-group col-md-6">
-                  <label>Zip</label>
-                  <input type="text" class="form-control" value="160052">
-                </div>
-                <div class="form-group col-md-12">
-                  <label>About</label>
-                  <textarea class="form-control">Maecenas quis consequat libero, a feugiat eros. Nunc ut lacinia tortor morbi ultricies laoreet ullamcorper phasellus semper</textarea>
-                </div>
-              </div>
+        <!-- Dashboard wrapper 2 -->
+        <div class="dashboard-wraper mb-3" id="interested-owners">
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+              <h4>Els immobles afegits <span class="pc-title theme-cl">a la pàgina web</span> </h4>
+              <h6>(Contactar amb el propietari)</h6>
             </div>
           </div>
-          <div class="form-submit">
-            <h4>Social Accounts</h4>
-            <div class="submit-section">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label>Facebook</label>
-                  <input type="text" class="form-control" value="https://facebook.com/">
-                </div>
-                <div class="form-group col-md-6">
-                  <label>Twitter</label>
-                  <input type="email" class="form-control" value="https://twitter.com/">
-                </div>
-                <div class="form-group col-md-6">
-                  <label>Google Plus</label>
-                  <input type="text" class="form-control" value="https://googleplus.com">
-                </div>
-                <div class="form-group col-md-6">
-                  <label>LinkedIn</label>
-                  <input type="text" class="form-control" value="https://linkedin.com/">
-                </div>
-                <div class="form-group col-lg-12 col-md-12">
-                  <button class="btn btn-theme-light-2 rounded" type="submit">Save Changes</button>
-                </div>
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+              <div class="mb-3 d-flex flex-wrap">
+                <% @webrealestates.each do |webrealestate| %>
+                  <% if webrealestate.photos.attached? %>
+                    <div class="card me-3 mb-3" style="width: 18rem;">
+                      <%= cl_image_tag webrealestate.photos.first.key, class:"card-img-top" %>
+                      <div class="card-body">
+                        <h5 class="card-title"><%= webrealestate.status %></h5>
+                        <p class="card-text"><%= webrealestate.address %></p>
+                        <p class="card-text"><%= webrealestate.owner %></p>
+                        <p class="card-text"><%= webrealestate.email %></p>
+                        <p class="card-text"><%= webrealestate.phone %></p>
+                        <%= link_to "Mes detalls", webrealestate, class: "btn btn-primary" %>
+                      </div>
+                    </div>
+                  <% end %>
+                <% end %>
+              </ul>
+              <div>
               </div>
             </div>
           </div>
