--- a/app/views/shared/_call_to_action.html.erb
+++ b/app/views/shared/_call_to_action.html.erb
@@ -8,7 +8,7 @@
             <h3>Tens un immoble i vols que t'ajudem a vendre'l?</h3>
             <span>Publica el teu anunci gratis.</span>
           </div>
-          <%= link_to new_realestate_path, class: "btn btn-call-to-act" do %>
+          <%= link_to new_webrealestate_path, class: "btn btn-call-to-act" do %>
             <i class="fas fa-house-circle-check"></i>
             <span class="ms-1">Afegir immoble</span>
           <% end %>
