--- a/app/views/shared/_log_in_modal.html.erb
+++ b/app/views/shared/_log_in_modal.html.erb
@@ -20,19 +20,21 @@
               <%= f.input :remember_me, as: :boolean if devise_mapping.rememberable? %>
             </div>
             <div class="form-actions">
-              <%= f.button :submit, "Entrar a Sistach Finques", class: "btn btn-md full-width btn-theme-light-2 rounded" %>
+              <%= f.button :submit, "Entrar", class: "btn btn-md full-width btn-theme-light-2 rounded" %>
             </div>
             <div class="text-center">
               <p class="mt-2"><%= link_to "No recordes la contrasenya?", new_password_path(resource_name), class: "link" %></p>
             </div>
           <% end %>
+          <!--
           <div class="modal-divider"><span>O</span></div>
           <div>
             <%= link_to "Apunta't", new_registration_path(resource_name), class: "btn btn-md full-width btn-secondary rounded" %>
           </div>
         </div>
+        -->
+        </div>
       </div>
     </div>
   </div>
-</div>
-<!-- End Modal -->
+  <!-- End Modal -->
