--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @post do |f| %>
+  <%= simple_form_for @post, data: {turbo: false} do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
   <div class="form-inputs">
@@ -11,7 +11,10 @@
     <%= f.input :photo, as: :file, input_html: { class: "form-control-photo" }  %>
     <%= f.association :category %>
   </div>
+  <div class="form-actions mb-3">
+    <%= f.button :submit, value: "Save", class: "btn btn-black btn-md rounded full-width" %>
+  </div>
   <div class="form-actions">
-    <%= f.button :submit, class: "btn btn-black btn-md rounded full-width" %>
+    <%= f.button :submit, value: "Save translations", class: "btn btn-secondary btn-md rounded full-width" %>
   </div>
 <% end %>
