--- a/app/views/realestates/_realestate.html.erb
+++ b/app/views/realestates/_realestate.html.erb
@@ -24,58 +24,63 @@
             <span class="prt-types sale"><%= realestate.salesprice.present? ? "En Venda" : "En lloguer" %></span>
           </div>
           <div class="list-price">
-            <h6 class="listing-card-info-price"><%= number_to_currency(realestate.salesprice, unit: "€", separator: ",", delimiter: ".", precision: 0).delete(' ') || number_to_currency(realestate.rentprice, unit: "€", separator: ",", delimiter: ".", precision: 0).delete(' ')  %></h6>
+            <h6 class="listing-card-info-price">
+              <% if realestate.salesprice.present?  %>
+                <%= number_to_currency(realestate.salesprice, unit: "€", separator: ",", delimiter: ".", precision: 0).delete(' ') %>
+              <% elsif realestate.rentprice.present? %>
+                <%= number_to_currency(realestate.rentprice, unit: "€", separator: ",", delimiter: ".", precision: 0).delete(' ') %>
+              <% end %>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="price-features-wrapper">
-        <div class="list-fx-features">
-          <% if realestate.features.find_by(name: "Nº de dormitorios").present? %>
-            <div class="listing-card-info-icon">
-              <div class="inc-fleat-icon"><i class="fas fa-bed"></i></div>
-              <%= realestate.features.find_by(name: "Nº de dormitorios").value %> hab.
-            </div>
-          <% end %>
-          <% if realestate.features.find_by(name: "Nº de baños").present? %>
-            <div class="listing-card-info-icon">
-              <div class="inc-fleat-icon"><i class="fas fa-bath"></i></div>
-              <%= realestate.features.find_by(name: "Nº de baños").value  %> banys
-            </div>
-          <% end %>
-          <% if realestate.csurface.present? %>
-            <div class="listing-card-info-icon">
-              <div class="inc-fleat-icon">
-                <i class="fas fa-compress"></i>
+        <div class="price-features-wrapper">
+          <div class="list-fx-features">
+            <% if realestate.features.find_by(name: "Nº de dormitorios").present? %>
+              <div class="listing-card-info-icon">
+                <div class="inc-fleat-icon"><i class="fas fa-bed"></i></div>
+                <%= realestate.features.find_by(name: "Nº de dormitorios").value %> hab.
               </div>
-              <%= realestate.csurface.round %> m²
-            </div>
-          <% elsif realestate.usurface.present? %>
-            <div class="listing-card-info-icon">
-              <div class="inc-fleat-icon">
-                <i class="fas fa-compress"></i>
+            <% end %>
+            <% if realestate.features.find_by(name: "Nº de baños").present? %>
+              <div class="listing-card-info-icon">
+                <div class="inc-fleat-icon"><i class="fas fa-bath"></i></div>
+                <%= realestate.features.find_by(name: "Nº de baños").value  %> banys
               </div>
-              <%= realestate.usurface.round %> m²
+            <% end %>
+            <% if realestate.csurface.present? %>
+              <div class="listing-card-info-icon">
+                <div class="inc-fleat-icon">
+                  <i class="fas fa-compress"></i>
+                </div>
+                <%= realestate.csurface.round %> m²
+              </div>
+            <% elsif realestate.usurface.present? %>
+              <div class="listing-card-info-icon">
+                <div class="inc-fleat-icon">
+                  <i class="fas fa-compress"></i>
+                </div>
+                <%= realestate.usurface.round %> m²
+              </div>
+            <% end %>
+            <div class="listing-card-info-icon">
+              <div class="inc-fleat-icon"><i class="fas fa-hashtag"></i></div>
+              <%= realestate.reference %>
             </div>
-          <% end %>
-          <div class="listing-card-info-icon">
-            <div class="inc-fleat-icon"><i class="fas fa-hashtag"></i></div>
-            <%= realestate.reference %>
           </div>
         </div>
-      </div>
-      <div class="listing-footer-wrapper">
-        <div class="listing-locate">
-          <span class="listing-location">
-            <i class="fas fa-location-dot text-secondary"></i>
-            <span class="ms-1">
-              <%= realestate.short_address %>
-            </span>
-          </div>
-          <div class="listing-detail-btn">
-            <%= link_to "Més detalls", realestate, class: "more-btn" %>
+        <div class="listing-footer-wrapper">
+          <div class="listing-locate">
+            <span class="listing-location">
+              <i class="fas fa-location-dot text-secondary"></i>
+              <span class="ms-1">
+                <%= realestate.short_address %>
+              </span>
+            </div>
+            <div class="listing-detail-btn">
+              <%= link_to "Més detalls", realestate, class: "more-btn" %>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- Single Property End -->
+    <!-- Single Property End -->
