google cloud translate api

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,10 @@
     <div class="row justify-content-center">
       <div class="col-lg-9 col-md-11 col-sm-12">
         <div class="inner-banner-text text-center">
-          <p class="lead-i text-white"><%= @title.bheader1 %> <span class="badge badge-success"><%= @title.bbutton %></span></p>
+          <p class="lead-i text-white">
+          <%= @title.bheader1 %>
+          <span class="badge badge-success">
+          <%= @title.bbutton %></span></p>
           <h2><span class="font-normal text-white"><%= @title.bheader2 %></span> <span data-controller="typed-js" data-typed-js-typedtext-value="<%= @typedtext %>"></span></h2>
         </div>
         <div class="full-search-2 eclip-search italian-search hero-search-radius shadow-hard mt-5">
