--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,9 +2,9 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
   <div class="form-inputs">
-    <%= f.input :title %>
+    <%= f.input :title_ca %>
     <%= f.input :author %>
-    <%= f.input :content, as: :ckeditor, input_html: { ckeditor: { toolbar: 'full' }}  %>
+    <%= f.input :content_ca, as: :ckeditor, input_html: { ckeditor: { toolbar: 'full' }}  %>
     <%= f.input :content_es, as: :ckeditor, input_html: { ckeditor: { toolbar: 'full' }}  %>
     <%= f.input :content_en, as: :ckeditor, input_html: { ckeditor: { toolbar: 'full' }}  %>
     <%= f.input :content_fr, as: :ckeditor, input_html: { ckeditor: { toolbar: 'full' }}  %>
