--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-md-12">
-        <h4 class="ipt-title">Modificar l'article <span class="text-success"><%= @post.title %></span></h4>
+        <h4 class="ipt-title">Modificar l'article <span class="text-success"><%= @post.title_ca %></span></h4>
       </div>
     </div>
   </div>
