--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,76 +1,69 @@
 <!-- ============================================================== -->
 <!-- Top header  -->
 <!-- ============================================================== -->
-<!-- Start Navigation -->
-<div class="header header-transparent dark">
+<nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <nav id="navigation" class="navigation navigation-landscape">
-      <div class="nav-header">
-        <%= link_to root_path, class: "nav-brand" do %>
-          <%= image_tag "https://res.cloudinary.com/dlzusxobf/image/upload/v1665045942/FINQUES_SISTACH__Finques_nxoogg.png", class: "logo", alt: "Logo Sistach Finques" %>
-        <% end %>
-        <div class="nav-toggle"></div>
-      </div>
-      <div class="nav-menus-wrapper" style="transition-property: none;">
-        <ul class="nav-menu">
-          <li class="active"><a href="/">Inici</a>
-          </li>
-          <li><%= link_to "Immobles", realestates_path %>
-          </li>
-          <li><%= link_to "Mapa", index_map_realestates_path %>
-          </li>
-          <li><a href="/lloguer-turistic">Lloguer turístic</a>
-          </li>
-          <li><a href="/sobre-nosaltres">Sobre nosaltres</a>
-          </li>
-          <li>
-            <%= link_to "Noticies", posts_path %>
-          </li>
-          <li>
-            <%= link_to t("contact"), new_contact_path %>
-          </li>
-        </ul>
-        <ul class="nav-menu nav-menu-social align-to-right">
-          <li>
-            <%= link_to new_webrealestate_path, class: "text-success" do %>
-              <i class="fas fa-house-circle-check"></i>
-              <span class="ms-1">Afegir immoble</span>
-            <% end %>
-          </li>
-          <% if user_signed_in? %>
-            <li class="nav-item dropdown">
-              <%# image_tag("sistach_favicon", alt: "Sistach Finques"), class: "avatar dropdown-toggle", id: "navbarDropdown1", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-              <% if current_user.avatar.attached? %>
-                <%= cl_image_tag current_user.avatar.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-              <% else %>
-                <%= cl_image_tag("https://res.cloudinary.com/dlzusxobf/image/upload/v1674377649/sistach_favicon_c9rb1y.png", alt: "Sistach Finques", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false) %>
-              <% end %>
-              <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                <%= link_to "Editar el compte", edit_user_registration_path, class: "dropdown-item" %>
-                <%= link_to "Panell de control", dashboard_path, class: "dropdown-item" %>
-                <a href="JavaScript:Void(0);" data-bs-toggle="modal" data-bs-target="#logout" class="dropdown-item"> <i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i> Tancar sessió</a>
-              </div>
-            </li>
-          <% else %>
-            <!--
-            <li class="add-listing blue2">
-              <a href="JavaScript:Void(0);" data-bs-toggle="modal" data-bs-target="#login"><i class="fas fa-user"></i> Iniciar sessió</a>
-            </li>
-            -->
+    <%= link_to root_path, class: "nav-brand" do %>
+      <%= image_tag "https://res.cloudinary.com/dlzusxobf/image/upload/v1665045942/FINQUES_SISTACH__Finques_nxoogg.png", class: "logo", alt: "Logo Sistach Finques" %>
+    <% end %>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav nav-menu">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Inici</a>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Immobles", realestates_path %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Mapa", index_map_realestates_path %>
+        </li>
+        <li class="nav-item">
+          <a href="/lloguer-turistic">Lloguer turístic</a>
+        </li>
+        <li class="nav-item">
+          <a href="/sobre-nosaltres">Sobre nosaltres</a>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Noticies", posts_path %>
+        </li>
+        <li class="nav-item">
+          <%= link_to t("contact"), new_contact_path %>
+        </li>
+        <li>
+          <%= link_to new_webrealestate_path, class: "text-success" do %>
+            <i class="fas fa-house-circle-check"></i>
+            <span class="ms-1">Afegir immoble</span>
           <% end %>
+        </li>
+        <% if user_signed_in? %>
           <li class="nav-item dropdown">
-            <% I18n.available_locales.each do |lang| %>
-              <% if I18n.locale === lang || params[:locale] === lang %>
-                <%= link_to url_for(locale: lang.to_s), class: "nav-link dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false do %>
-                  <% if lang === :ca %>
-                    <span class="flag-icon flag-icon-es-ca"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
-                  <% elsif lang === :en %>
-                    <span class="flag-icon flag-icon-gb"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
-                  <% elsif lang === :es %>
-                    <span class="flag-icon flag-icon-es"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
-                  <% elsif lang === :fr %>
-                    <span class="flag-icon flag-icon-fr"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
-                  <% end %>
+            <% if current_user.avatar.attached? %>
+              <%= cl_image_tag current_user.avatar.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <% else %>
+              <%= cl_image_tag("https://res.cloudinary.com/dlzusxobf/image/upload/v1674377649/sistach_favicon_c9rb1y.png", alt: "Sistach Finques", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false) %>
+            <% end %>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <li><%= link_to "Editar el compte", edit_user_registration_path, class: "dropdown-item" %></li>
+              <li><%= link_to "Panell de control", dashboard_path, class: "dropdown-item" %></li>
+              <li><a href="JavaScript:Void(0);" data-bs-toggle="modal" data-bs-target="#logout" class="dropdown-item"> <i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i> Tancar sessió</a></li>
+            </ul>
+          </li>
+        <% end %>
+        <li class="nav-item dropdown">
+          <% I18n.available_locales.each do |lang| %>
+            <% if I18n.locale === lang || params[:locale] === lang %>
+              <%= link_to url_for(locale: lang.to_s), class: "nav-link dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false do %>
+                <% if lang === :ca %>
+                  <span class="flag-icon flag-icon-es-ca"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
+                <% elsif lang === :en %>
+                  <span class="flag-icon flag-icon-gb"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
+                <% elsif lang === :es %>
+                  <span class="flag-icon flag-icon-es"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
+                <% elsif lang === :fr %>
+                  <span class="flag-icon flag-icon-fr"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
                 <% end %>
               <% end %>
             <% end %>
@@ -88,14 +81,12 @@
                 <span class="flag-icon flag-icon-fr"> </span> Français
               <% end %>
             </div>
-          </li>
-        </ul>
-      </div>
-    </nav>
+          <% end %>
+        </li>
+      </ul>
+    </div>
   </div>
-</div>
-<!-- End Navigation -->
-<div class="clearfix"></div>
+</nav>
 <!-- ============================================================== -->
 <!-- Top header  -->
 <!-- ============================================================== -->
