--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= javascript_include_tag Ckeditor.cdn_url %>
     <%= favicon_link_tag asset_path('https://res.cloudinary.com/dlzusxobf/image/upload/v1674377649/sistach_favicon_c9rb1y.png') %>
   </head>
-  <body class="blue-skin">
+  <body class="darkblue-skin">
     <!-- ============================================================== -->
     <!-- Preloader - style you can find in spinners.css -->
     <!-- Activate Preloader when I make a js controller for it ==============================================================-->
