--- a/app/assets/stylesheets/components/_how_it_works.scss
+++ b/app/assets/stylesheets/components/_how_it_works.scss
@@ -1,5 +1,5 @@
 /*------------------------------------------------------------
-	How it Work
+	How it Works
 -------------------------------------------------------------*/
 .middle-icon-features {
   display: table;
