--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,12 +2,12 @@
 @import "address_autocomplete";
 @import "alert";
 @import "avatar";
-@import "bottom_to_top";
+// @import "bottom_to_top";
 @import "contact";
 @import "footer";
-@import "form_legend_clear";
+// @import "form_legend_clear";
 @import "global";
-@import "how_it_works";
+// @import "how_it_works";
 @import "map";
 @import "navbar";
 @import "pop_up_modal";
