--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,21 +1,21 @@
 <!-- ============================================================== -->
 <!-- Top header  -->
 <!-- ============================================================== -->
-<nav class="navbar navbar-expand-lg bg-light">
+<div class="navbar navbar-expand-sm navbar-light navbar-lw">
   <div class="container-fluid">
     <%= link_to root_path, class: "nav-brand" do %>
       <%= image_tag "https://res.cloudinary.com/dlzusxobf/image/upload/v1665045942/FINQUES_SISTACH__Finques_nxoogg.png", class: "logo", alt: "Logo Sistach Finques" %>
     <% end %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav nav-menu">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Inici</a>
         </li>
         <li class="nav-item">
-          <%= link_to "Immobles", realestates_path %>
+          <%= link_to "Immobles", realestates_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Mapa", index_map_realestates_path %>
@@ -29,10 +29,10 @@
         <li class="nav-item">
           <%= link_to "Noticies", posts_path %>
         </li>
-        <li class="nav-item">
+        <li class="nav-item me-lg-5">
           <%= link_to t("contact"), new_contact_path %>
         </li>
-        <li>
+        <li class="nav-item ms-lg-5">
           <%= link_to new_webrealestate_path, class: "text-success" do %>
             <i class="fas fa-house-circle-check"></i>
             <span class="ms-1">Afegir immoble</span>
@@ -45,48 +45,50 @@
             <% else %>
               <%= cl_image_tag("https://res.cloudinary.com/dlzusxobf/image/upload/v1674377649/sistach_favicon_c9rb1y.png", alt: "Sistach Finques", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false) %>
             <% end %>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <li><%= link_to "Editar el compte", edit_user_registration_path, class: "dropdown-item" %></li>
-              <li><%= link_to "Panell de control", dashboard_path, class: "dropdown-item" %></li>
-              <li><a href="JavaScript:Void(0);" data-bs-toggle="modal" data-bs-target="#logout" class="dropdown-item"> <i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i> Tancar sessió</a></li>
-            </ul>
+            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <%= link_to "Editar el compte", edit_user_registration_path, class: "dropdown-item" %>
+              <%= link_to "Panell de control", dashboard_path, class: "dropdown-item" %>
+              <a href="JavaScript:Void(0);" data-bs-toggle="modal" data-bs-target="#logout" class="dropdown-item"> <i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i> Tancar sessió</a>
+            </div>
           </li>
-        <% end %>
-        <li class="nav-item dropdown">
-          <% I18n.available_locales.each do |lang| %>
-            <% if I18n.locale === lang || params[:locale] === lang %>
-              <%= link_to url_for(locale: lang.to_s), class: "nav-link dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false do %>
-                <% if lang === :ca %>
-                  <span class="flag-icon flag-icon-es-ca"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
-                <% elsif lang === :en %>
-                  <span class="flag-icon flag-icon-gb"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
-                <% elsif lang === :es %>
-                  <span class="flag-icon flag-icon-es"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
-                <% elsif lang === :fr %>
-                  <span class="flag-icon flag-icon-fr"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
+          <li class="nav-item dropdown">
+            <% I18n.available_locales.each do |lang| %>
+              <% if I18n.locale === lang || params[:locale] === lang %>
+                <%= link_to url_for(locale: lang.to_s), class: "nav-link dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false do %>
+                  <% if lang === :ca %>
+                    <span class="flag-icon flag-icon-es-ca"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
+                  <% elsif lang === :en %>
+                    <span class="flag-icon flag-icon-gb"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
+                  <% elsif lang === :es %>
+                    <span class="flag-icon flag-icon-es"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
+                  <% elsif lang === :fr %>
+                    <span class="flag-icon flag-icon-fr"> </span> <span class="ms-1 d-none d-lg-inline text-gray-600 small"><%= t('locale') %></span>
+                  <% end %>
                 <% end %>
               <% end %>
+              <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <%= link_to url_for(locale: 'en'), class: "dropdown-item" do %>
+                  <span class="flag-icon flag-icon-gb"> </span> English
+                <% end %>
+                <%= link_to url_for(locale: 'ca'), class: "dropdown-item" do %>
+                  <span class="flag-icon flag-icon-es-ca"> </span> Català
+                <% end %>
+                <%= link_to url_for(locale: 'es'), class: "dropdown-item" do %>
+                  <span class="flag-icon flag-icon-es"> </span> Español
+                <% end %>
+                <%= link_to url_for(locale: 'fr'), class: "dropdown-item" do %>
+                  <span class="flag-icon flag-icon-fr"> </span> Français
+                <% end %>
+              </div>
             <% end %>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to url_for(locale: 'en'), class: "dropdown-item" do %>
-                <span class="flag-icon flag-icon-gb"> </span> English
-              <% end %>
-              <%= link_to url_for(locale: 'ca'), class: "dropdown-item" do %>
-                <span class="flag-icon flag-icon-es-ca"> </span> Català
-              <% end %>
-              <%= link_to url_for(locale: 'es'), class: "dropdown-item" do %>
-                <span class="flag-icon flag-icon-es"> </span> Español
-              <% end %>
-              <%= link_to url_for(locale: 'fr'), class: "dropdown-item" do %>
-                <span class="flag-icon flag-icon-fr"> </span> Français
-              <% end %>
-            </div>
-          <% end %>
-        </li>
+          </li>
+        <% end %>
+        <!--li class="nav-item"-->
+        <!--/li-->
       </ul>
     </div>
   </div>
-</nav>
+</div>
 <!-- ============================================================== -->
 <!-- Top header  -->
 <!-- ============================================================== -->
