--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -658,11 +658,11 @@ nav a:hover {
   position: absolute;
 }
 
-.menu__list,
-.navbar,
-nav a {
-  position: relative;
-}
+// .menu__list,
+// .navbar,
+// nav a {
+//   position: relative;
+// }
 
 .navigation-portrait .submenu-indicator {
   right: 0;
