--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <!-- ============================================================== -->
 <!-- Top header  -->
 <!-- ============================================================== -->
-<div class="navbar navbar-expand-sm navbar-light navbar-lw">
+<div class="navbar fixed-top navbar-expand-sm navbar-light navbar-lw">
   <div class="container-fluid">
     <%= link_to root_path, class: "nav-brand" do %>
       <%= image_tag "https://res.cloudinary.com/dlzusxobf/image/upload/v1665045942/FINQUES_SISTACH__Finques_nxoogg.png", class: "logo", alt: "Logo Sistach Finques" %>
