--- a/app/views/pages/vacation_rentals.html.erb
+++ b/app/views/pages/vacation_rentals.html.erb
@@ -1,5 +1,9 @@
 <!-- ============================ Hero Banner  Start================================== -->
-<div class="image-cover hero-banner2 pt-5" style="background:url(https://res.cloudinary.com/dlzusxobf/image/upload/v1673265040/costa_brava_txahdm.jpg) no-repeat;" data-overlay="6">
+<a href="https://www.sistachrentals.com" class="btn btn-call-to-act" target="_blank">
+  Visita la nostra pàgina de lloguers turístic <br>
+  sistachrentals.com
+</a>
+<div class="image-cover hero-banner2 pt-5" style="background:url(https://res.cloudinary.com/dlzusxobf/image/upload/v1673265040/costa_brava_txahdm.jpg) no-repeat;">
   <div class="container mt-5">
     <div class="call-to-act">
       <div class="call-to-act-head">
